--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="screen" id="display_data"></div> -->
     <script src="script.js"></script>
     <div class="wrapper">
-        <div class="calc-button">Levico Terme</div>
+        <div class="location">Levico Terme</div>
         <script type="text/javascript">
             weather_data();
         </script>
