--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         </script>
         <div class="screen" id="display_data"></div>
         <div class="timer" id="display_time"></div>
+        <div class="signature">luca rizzon | inmerso | embedded design</div>
     </div>
 </body>
 </html>
