--- a/index.html
+++ b/index.html
@@ -8,21 +8,19 @@
     <title>Meteo</title>
 </head>
 <body>
-    
-    <!-- <form>
-        <input type="submit" value="Get weather info" id="weather_data">
-    </form>
-
-    <div class="screen" id="display_data"></div> -->
     <script src="script.js"></script>
     <div class="wrapper">
-        <div class="location">Levico Terme</div>
+        <div class="location">
+            Levico Terme
+        </div>
         <script type="text/javascript">
             weather_data();
         </script>
         <div class="screen" id="display_data"></div>
         <div class="timer" id="display_time"></div>
-        <div class="signature">luca rizzon | inmerso | embedded design</div>
+        <div class="signature">
+            luca rizzon | inmerso | embedded design
+        </div>
     </div>
 </body>
 </html>
